@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-24T02:10:31Z",
-  "count" : 285,
+  "timestamp" : "2022-06-24T08:30:12Z",
+  "count" : 183,
   "count_minmax" : [ 121, 353 ],
-  "count_decinc" : [ -68, +353 ],
+  "count_decinc" : [ -170, +353 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
