@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-24T02:10:31Z",
+  "timestamp" : "2022-06-24T08:30:12Z",
   "count_outdated" : 31863,
   "uniques_outdated" : 636,
-  "count" : 36755,
-  "uniques" : 678,
+  "count" : 36772,
+  "uniques" : 679,
   "clones" : [
     {
       "timestamp": "2022-06-10T00:00:00Z",
-      "count": 285,
+      "count": 183,
       "count_minmax": [ 121, 353 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
@@ -102,6 +102,13 @@
       "count_minmax": [ 120, 353 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-06-24T00:00:00Z",
+      "count": 119,
+      "count_minmax": [ 119, 119 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
