@@ -1,10 +1,10 @@
 {
-  "count": 4892,
+  "count": 4909,
   "uniques": 15,
   "clones": [
     {
       "timestamp": "2022-06-10T00:00:00Z",
-      "count": 285,
+      "count": 183,
       "uniques": 2
     },
     {
@@ -71,6 +71,11 @@
       "timestamp": "2022-06-23T00:00:00Z",
       "count": 353,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-06-24T00:00:00Z",
+      "count": 119,
+      "uniques": 1
     }
   ]
 }
