@@ -1,3 +1,10 @@
+2022-06-24T08:30:12Z:
+* notice: last 14d: unq all: 15 4909
+* notice: prev accum: outdated-unq outdated-all / unq all: 636 31863 / 678 36755
+* notice: next accum: outdated-unq outdated-all / unq all: 636 31863 / 679 36772
+* notice: prev exec diff / last date diff / accum: unq all: +1 +119 -0 -102 / +1 +119 -0 -0 / 1 119
+* notice: removed / changed dates: [] / [2022-06-10 2022-06-24]
+
 2022-06-24T02:10:31Z:
 * notice: last 14d: unq all: 15 4892
 * notice: prev accum: outdated-unq outdated-all / unq all: 634 31510 / 677 36420
